[package]
name = "officer"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
kube = { version = "0.93.1" }
serde = "1.0.209"
serde_json = "1.0.127"
k8s-openapi = { version = "0.22", features = ["latest"] }
paperclip = { version = "0.8", features = ["actix4", "v3", "swagger-ui"] }
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
futures = "0.3.30"
url = "2.5.2"
oauth2 = "4.4.2"
actix-session = { version = "0.10.1", features = ["cookie-session"] }

